[tool.poetry]
name = "api_helper"
version = "0.1.0"
description = "A package for converting api calls to pandas dataframe"
authors = ["Saurabh Sabharwal"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "8.2.2"
jupyterlab = "4.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
